Revert "Fixed navbar button not showing on mobile"
This reverts commit 499d3ef5030c68db5b3363773c76acb0c8482827.

--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -78,14 +78,14 @@ nav li {
 
 .menu-item>a {
     text-decoration: none;
-    color: white!important;
+    color: white;
     box-shadow: inset 0 0 0 0 var(--yellow);
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
 
 .menu-item>a:hover {
     box-shadow: inset 250px 0 0 0 var(--yellow);
-    color: var(--purple)!important;
+    color: var(--purple);
 }
 
 #main {
@@ -224,7 +224,7 @@ footer {
     }
 
     .menu-item>a:hover {
-        color: var(--yellow)!important;
+        color: var(--yellow);
         box-shadow: inset 0 0 0 0 var(--yellow);
     }
 }
